--- a/src/components/site-footer/site-footer.config.json
+++ b/src/components/site-footer/site-footer.config.json
@@ -130,8 +130,38 @@
             "url": "#"
           }
         ],
+        "footer_secondary_nav": [
+          {
+            "title": "Sign Ons and Tools",
+            "url": "#"
+          },
+          {
+            "title": "Log In",
+            "url": "#"
+          }
+        ],
         "site_org_contact": {
-          "name": "Site Name/Org Name Lorem Ipsum"
+          "name": "Site Name/Org Name Lorem Ipsum",
+          "email": [
+            {
+              "label": "Undergrad",
+              "email_address": "email@iastate.edu"
+            },
+            {
+              "email_address": "email@iastate.edu"
+            }
+          ],
+          "phone": [
+            {
+              "label": "P",
+              "phone_number": "(515) 294-4347"
+            }
+          ],
+          "address": {
+            "building": "Building",
+            "street": "12345 Street Address",
+            "city_state_zip": "Ames, IA 50011"
+          }
         }
       }
     }
