correction to ecosystem site footer quick link label, updating config data

--- a/src/components/site-footer/site-footer.config.json
+++ b/src/components/site-footer/site-footer.config.json
@@ -132,11 +132,27 @@
         ],
         "footer_secondary_nav": [
           {
-            "title": "Sign Ons and Tools",
+            "title": "Quick Link 1",
             "url": "#"
           },
           {
-            "title": "Log In",
+            "title": "Quick Link 2",
+            "url": "#"
+          },
+          {
+            "title": "Quick Link 3",
+            "url": "#"
+          },
+          {
+            "title": "Quick Link 4",
+            "url": "#"
+          },
+          {
+            "title": "Quick Link 5",
+            "url": "#"
+          },
+          {
+            "title": "Sign Ons and Tools",
             "url": "#"
           }
         ],
