site-header--ecosystem progress

--- a/src/components/site-header/site-header.config.json
+++ b/src/components/site-header/site-header.config.json
@@ -184,7 +184,11 @@
       "name": "ecosystem",
       "context": {
         "parent_unit_name": "Parent Unit Name Lorem Ipsum",
-        "website_title": "Website Title Lorem Ipsum"
+        "website_title": "Website Title Lorem Ipsum",
+        "utility_button": {
+          "title": "Button",
+          "url": "https://www.iastate.edu/"
+        }
       }
     }
   ]
