--- a/src/components/site-header/site-header.config.json
+++ b/src/components/site-header/site-header.config.json
@@ -185,6 +185,7 @@
       "context": {
         "parent_unit_name": "Parent Unit Name Lorem Ipsum",
         "website_title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
+        "search_visible": true,
         "utility_button": {
           "title": "Button",
           "url": "https://www.iastate.edu/"
