adding ecosystem hero example pages

--- a/src/components/pages/ecosystem-examples.config.json
+++ b/src/components/pages/ecosystem-examples.config.json
@@ -54,23 +54,21 @@
     {
       "name": "background-video",
       "context": {
-        "context": {
-          "hero": {
-            "image": "../../img/ecosystem-hero-featured_fpo.jpg",
-            "title": "Hero Title Lorem Ipsum Dolor",
-            "video_id": "LjOmcZkXVcU",
-            "button_set": {
-              "items": [
-                {
-                  "text": "Button Label",
-                  "url": "https://iastate.edu"
-                },
-                {
-                  "text": "Button Label",
-                  "url": "https://iastate.edu"
-                }
-              ]
-            }
+        "hero": {
+          "image": "../../img/ecosystem-hero-featured_fpo.jpg",
+          "title": "Hero Title Lorem Ipsum Dolor",
+          "video_id": "LjOmcZkXVcU",
+          "button_set": {
+            "items": [
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              },
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              }
+            ]
           }
         }
       }
@@ -78,23 +76,12 @@
     {
       "name": "background-video-no-buttons",
       "context": {
-        "context": {
-          "hero": {
-            "image": "../../img/ecosystem-hero-featured_fpo.jpg",
-            "title": "Hero Title Lorem Ipsum Dolor",
-            "video_id": "LjOmcZkXVcU",
-            "button_set": {
-              "items": [
-                {
-                  "text": "Button Label",
-                  "url": "https://iastate.edu"
-                },
-                {
-                  "text": "Button Label",
-                  "url": "https://iastate.edu"
-                }
-              ]
-            }
+        "hero": {
+          "image": "../../img/ecosystem-hero-featured_fpo.jpg",
+          "title": "Civil, Construction and Environmental Engineering",
+          "video_id": "LjOmcZkXVcU",
+          "button_set": {
+            "items": []
           }
         }
       }
@@ -102,19 +89,17 @@
     {
       "name": "background-video-one-button",
       "context": {
-        "context": {
-          "hero": {
-            "image": "../../img/ecosystem-hero-featured_fpo.jpg",
-            "title": "Hero Title Lorem Ipsum Dolor",
-            "video_id": "LjOmcZkXVcU",
-            "button_set": {
-              "items": [
-                {
-                  "text": "Button Label",
-                  "url": "https://iastate.edu"
-                }
-              ]
-            }
+        "hero": {
+          "image": "../../img/ecosystem-hero-featured_fpo.jpg",
+          "title": "Marston Hall",
+          "video_id": "LjOmcZkXVcU",
+          "button_set": {
+            "items": [
+              {
+                "text": "About the Rededication",
+                "url": "https://iastate.edu"
+              }
+            ]
           }
         }
       }
@@ -122,22 +107,49 @@
     {
       "name": "supporting-image",
       "context": {
-        "context": {
-          "hero": {
-            "image": "../../img/ecosystem-hero-supporting_fpo.jpg",
-            "title": "Hero Title Lorem Ipsum Dolor",
-            "button_set": {
-              "items": [
-                {
-                  "text": "Button Label",
-                  "url": "https://iastate.edu"
-                },
-                {
-                  "text": "Button Label",
-                  "url": "https://iastate.edu"
-                }
-              ]
-            }
+        "hero": {
+          "image": "../../img/ecosystem-hero-supporting_fpo.jpg",
+          "title": "Hero Title Lorem Ipsum Dolor",
+          "button_set": {
+            "items": [
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              },
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              }
+            ]
+          }
+        }
+      }
+    },
+    {
+      "name": "supporting-image-no-buttons",
+      "context": {
+        "hero": {
+          "image": "../../img/ecosystem-hero-supporting_fpo.jpg",
+          "title": "Civil, Construction and Environmental Engineering",
+          "button_set": {
+            "items": []
+          }
+        }
+      }
+    },
+    {
+      "name": "supporting-image-one-button",
+      "context": {
+        "hero": {
+          "image": "../../img/ecosystem-hero-supporting_fpo.jpg",
+          "title": "Marston Hall",
+          "button_set": {
+            "items": [
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              }
+            ]
           }
         }
       }
@@ -145,22 +157,49 @@
     {
       "name": "atmospheric-image",
       "context": {
-        "context": {
-          "hero": {
-            "image": "../../img/ecosystem-hero-atmospheric_fpo.jpg",
-            "title": "Hero Title Lorem Ipsum Dolor",
-            "button_set": {
-              "items": [
-                {
-                  "text": "Button Label",
-                  "url": "https://iastate.edu"
-                },
-                {
-                  "text": "Button Label",
-                  "url": "https://iastate.edu"
-                }
-              ]
-            }
+        "hero": {
+          "image": "../../img/ecosystem-hero-atmospheric_fpo.jpg",
+          "title": "Hero Title Lorem Ipsum Dolor",
+          "button_set": {
+            "items": [
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              },
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              }
+            ]
+          }
+        }
+      }
+    },
+    {
+      "name": "atmospheric-image-no-buttons",
+      "context": {
+        "hero": {
+          "image": "../../img/ecosystem-hero-atmospheric_fpo.jpg",
+          "title": "Engineering at Iowa State University",
+          "button_set": {
+            "items": []
+          }
+        }
+      }
+    },
+    {
+      "name": "atmospheric-image-one-button",
+      "context": {
+        "hero": {
+          "image": "../../img/ecosystem-hero-atmospheric_fpo.jpg",
+          "title": "Marston Hall",
+          "button_set": {
+            "items": [
+              {
+                "text": "About the Rededication",
+                "url": "https://iastate.edu"
+              }
+            ]
           }
         }
       }
@@ -168,21 +207,46 @@
     {
       "name": "no-image",
       "context": {
-        "context": {
-          "hero": {
-            "title": "Hero Title Lorem Ipsum Dolor",
-            "button_set": {
-              "items": [
-                {
-                  "text": "Button Label",
-                  "url": "https://iastate.edu"
-                },
-                {
-                  "text": "Button Label",
-                  "url": "https://iastate.edu"
-                }
-              ]
-            }
+        "hero": {
+          "title": "Hero Title Lorem Ipsum Dolor",
+          "button_set": {
+            "items": [
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              },
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              }
+            ]
+          }
+        }
+      }
+    },
+    {
+      "name": "no-image-no-buttons",
+      "context": {
+        "hero": {
+          "title": "Engineering at Iowa State University",
+          "button_set": {
+            "items": []
+          }
+        }
+      }
+    },
+    {
+      "name": "no-image-one-button",
+      "context": {
+        "hero": {
+          "title": "Marston Hall",
+          "button_set": {
+            "items": [
+              {
+                "text": "About the Rededication",
+                "url": "https://iastate.edu"
+              }
+            ]
           }
         }
       }
