updating config for ecosystem utility nav

--- a/src/components/site-header/site-header.config.json
+++ b/src/components/site-header/site-header.config.json
@@ -192,7 +192,27 @@
         },
         "utility_nav": [
           {
-            "title": "My Admissions Account",
+            "title": "Util 1",
+            "url": "https://www.iastate.edu/"
+          },
+          {
+            "title": "Util 2",
+            "url": "https://www.iastate.edu/"
+          },
+          {
+            "title": "Util 3",
+            "url": "https://www.iastate.edu/"
+          },
+          {
+            "title": "Util 4",
+            "url": "https://www.iastate.edu/"
+          },
+          {
+            "title": "Util 5",
+            "url": "https://www.iastate.edu/"
+          },
+          {
+            "title": "Sign Ons and Tools",
             "url": "https://www.iastate.edu/"
           }
         ],
