--- a/src/components/card/card.config.json
+++ b/src/components/card/card.config.json
@@ -44,6 +44,31 @@
           }
         }
       }
+    },
+    {
+      "name": "with-modal",
+      "context": {
+        "title": "Modal Title",
+        "clickable": true,
+        "image": "../../img/HP_Finding_Solutions_Story_1_FPO.jpg",
+        "body": "<p>Modal Title Lorem Ipsum Dolor Sit Amet</p>",
+        "cta_text": "Read More",
+        "modal": {
+          "id": "modal-1",
+          "image": "../../img/Component-Modal-Square-Image_FPO.jpg",
+          "title": "Modal Title Lorem Ipsum Dolor Sit Amet",
+          "content": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>",
+          "link_set": {
+            "links": [
+              {
+                "url": "https://iastate.edu",
+                "text": "Link Example",
+                "variant": "link-tertiary"
+              }
+            ]
+          }
+        }
+      }
     }
   ]
 }
