--- a/src/components/pages/ecosystem-examples.config.json
+++ b/src/components/pages/ecosystem-examples.config.json
@@ -35,6 +35,18 @@
       }
     },
     {
+      "name": "form-with-featured-image-no-buttons",
+      "context": {
+        "hero": {
+          "image": "../../img/ecosystem-hero-featured_fpo.jpg",
+          "title": "Civil, Construction and Environmental Engineering",
+          "button_set": {
+            "items": []
+          }
+        }
+      }
+    },
+    {
       "name": "featured-image-one-button",
       "context": {
         "hero": {
