--- a/src/components/pages/admission-and-aid.config.json
+++ b/src/components/pages/admission-and-aid.config.json
@@ -79,21 +79,23 @@
           }
         }
       ],
-      "statistic_label": "Class of 2025 Profile",
-      "statistics": [
-        {
-          "statistic_title": "X,XXX",
-          "statistic_text": "Enrolled Students"
-        },
-        {
-          "statistic_title": "XX%",
-          "statistic_text": "Out of State or International Students"
-        },
-        {
-          "statistic_title": "1 in 4",
-          "statistic_text": "Students are Black, Asian, Hispanic or Multiracial"
-        }
-      ]
+      "statistic_with_text": {
+        "statistics_label": "Class of 2025 Profile",
+        "statistics": [
+          {
+            "statistic_title": "X,XXX",
+            "statistic_text": "Enrolled Students"
+          },
+          {
+            "statistic_title": "XX%",
+            "statistic_text": "Out of State or International Students"
+          },
+          {
+            "statistic_title": "1 in 4",
+            "statistic_text": "Students are Black, Asian, Hispanic or Multiracial"
+          }
+        ]
+      }
     },
     "afford": {
       "title": "Afford",
