Correcting Admission & Aid page issue (related to https://bugify.idfive.com/issues/27721)

--- a/src/components/pages/admission-and-aid.config.json
+++ b/src/components/pages/admission-and-aid.config.json
@@ -79,7 +79,7 @@
           }
         }
       ],
-      "statistic_with_text": {
+      "statistics": {
         "statistics_label": "Class of 2025 Profile",
         "statistics": [
           {
