finalizing utility nav "info for" dropdown functionality

--- a/src/components/site-header/site-header.config.json
+++ b/src/components/site-header/site-header.config.json
@@ -20,7 +20,7 @@
       {
         "title": "Info For...",
         "url": "https://www.iastate.edu/",
-        "children": [
+        "info_for_dropdown": [
           {
             "title": "Current Students",
             "url": "https://www.iastate.edu/"
