https://bugify.idfive.com/issues/27769

--- a/src/components/call-to-action/call-to-action.config.json
+++ b/src/components/call-to-action/call-to-action.config.json
@@ -5,7 +5,7 @@
       "name": "small",
       "context": {
         "title": "Small Call to Action Voluptate Lorem Ipsum Dolor",
-        "body": "<p>Nemo enim ipsam voluptatem quia voluptas.</p>",
+        "body": "Nemo enim ipsam voluptatem quia voluptas.",
         "button_set": {
           "items": [
             {
