--- a/src/components/pages/college-template.config.json
+++ b/src/components/pages/college-template.config.json
@@ -57,7 +57,7 @@
     },
     "overview": {
       "title": "Solve Real World Problems Lorem Ipsum Dolor",
-      "intro": "<p>The College of Agriculture and Life Sciences is one of the world’s leading institutions of agriculture, with more than 160 years of leadership in science, education and extension. The college educates future leaders, conducts mission-oriented research and shares new knowledge for the betterment of Iowa and the world. The college is one of eight colleges at Iowa State University, which is one of the most influential land grant universities in the nation.</p>",
+      "intro": "The College of Agriculture and Life Sciences is one of the world’s leading institutions of agriculture, with more than 160 years of leadership in science, education and extension. The college educates future leaders, conducts mission-oriented research and shares new knowledge for the betterment of Iowa and the world. The college is one of eight colleges at Iowa State University, which is one of the most influential land grant universities in the nation.",
       "button_set": {
         "items": [
           {
