--- a/src/components/pages/kitchen-sink.config.json
+++ b/src/components/pages/kitchen-sink.config.json
@@ -584,7 +584,7 @@
     },
     "call_to_action_small": {
       "title": "Small Call to Action Voluptate Lorem Ipsum Dolor",
-      "body": "<p>Nemo enim ipsam voluptatem quia voluptas.</p>",
+      "body": "Nemo enim ipsam voluptatem quia voluptas.",
       "button_set": {
         "items": [
           {
