https://bugify.idfive.com/issues/27826

--- a/src/components/site-header/site-header.config.json
+++ b/src/components/site-header/site-header.config.json
@@ -201,7 +201,10 @@
           "name": "Parent Unit Name Lorem Ipsum",
           "url": "https://www.iastate.edu/"
         },
-        "website_title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
+        "website_title": {
+          "text": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
+          "url": "#"
+        },
         "search_visible": true,
         "utility_button": {
           "title": "Button",
