Post development consolidation of branches.

--- a/src/components/site-header/site-header.config.json
+++ b/src/components/site-header/site-header.config.json
@@ -201,10 +201,7 @@
           "name": "Parent Unit Name Lorem Ipsum",
           "url": "https://www.iastate.edu/"
         },
-        "website_title": {
-          "text": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
-          "url": "#"
-        },
+        "website_title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
         "search_visible": true,
         "utility_button": {
           "title": "Button",
