Update to Majors Minors Certificates form id and anchor: https://bugify.idfive.com/issues/27796

--- a/src/components/pages/majors-minors-certificates.config.json
+++ b/src/components/pages/majors-minors-certificates.config.json
@@ -26,7 +26,7 @@
         "statistic_title": "200+",
         "statistic_text": "Majors, Minors and Certificates Offered"
       },
-      "text": "<h2>Choose Your Adventure</h2><p>More opportunities. More possibilities. More potential. Choose your adventure at Iowa State University. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><a href=\"#search\" class=\"iastate22-button\">Find My Major<span class=\"arrow\"></span></a>"
+      "text": "<h2>Choose Your Adventure</h2><p>More opportunities. More possibilities. More potential. Choose your adventure at Iowa State University. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><a href=\"#majMinSearch\" class=\"iastate22-button\">Find My Major<span class=\"arrow\"></span></a>"
     },
     "explore": {
       "title": "Explore Programs at Iowa State University",
