--- a/src/components/pages/posts-listings-profiles.config.json
+++ b/src/components/pages/posts-listings-profiles.config.json
@@ -22,10 +22,10 @@
         "body": "Short Title Lorem Ipsum"
       },
       {
-        "image": "../../img/faculty-bio-photo_fpo.jpg",
+        "image": "",
         "url": "#",
         "title": "FirstName LastName",
-        "body": "Short Title Lorem Ipsum"
+        "body": "No Image Example Short Title Lorem Ipsum"
       }
     ]
   }
