--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@frctl/twig": "^1.1.0",
     "@types/node": "^10.17.11",
     "@types/youtube-player": "^5.5.6",
+    "@vimeo/player": "^2.17.1",
     "ajv": "^6.5.2",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
