Bugify ticket: Update FE Library Markup + Wordpress Markup Fields for WYSIWYG https://bugify.idfive.com/issues/27931

--- a/src/components/feature/feature.config.json
+++ b/src/components/feature/feature.config.json
@@ -2,7 +2,7 @@
   "context": {
     "image": "../../img/Component-Featured-Image-Small_FPO.jpg",
     "title": "Feature Title Lorem Ipsum Dolor",
-    "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+    "body_copy": "<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>",
     "link_set": {
       "links": [
         {
