--- a/src/components/feature-with-small-image/feature-with-small-image.config.json
+++ b/src/components/feature-with-small-image/feature-with-small-image.config.json
@@ -2,7 +2,7 @@
   "context": {
     "image": "../../img/Component-Feature-Image-Small.jpg",
     "title": "Heading 2 - This is a title of major section of a page",
-    "body_copy": "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni lorem ipsem. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni lorem ipsem.",
+    "body_copy": "<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni lorem ipsem. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni lorem ipsem.</p>",
     "button": {
       "text": "Primary CTA Style",
       "url": "#"
