https://bugify.idfive.com/issues/27787 Homepage Carousel - equal slide heights

--- a/src/components/pages/Main University Site/home.config.json
+++ b/src/components/pages/Main University Site/home.config.json
@@ -112,7 +112,7 @@
           "title": "Advocating for Social Justice",
           "image": "../../img/HP_Finding_Solutions_Story_1_FPO.jpg",
           "name": "Zakariyah Hill, ’21",
-          "role": "Founder Supply Hive",
+          "role": "Founder Supply Hive See how the Iowa State University community has tackled today’s issues…Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, magni dolores eos. See how the Iowa State University community has tackled today’s issues…Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, magni dolores eos.",
           "url": "https://www.iastate.edu/",
           "clickable": false,
           "cta": {
