Site-footer--ecosystem updates: only output address if any of the relevant fields are filled out, update the phone/fax labels to allow for raw html in order to use <abbr> tags (for when "Phone" is abbreviated "P" for example): https://trello.com/c/LjaNYKVk/2-footer-styles-across-variants

--- a/src/components/site-footer/site-footer.config.json
+++ b/src/components/site-footer/site-footer.config.json
@@ -169,7 +169,7 @@
           ],
           "phone": [
             {
-              "label": "P",
+              "label": "<abbr title=\"Phone\">P</abbr>",
               "phone_number": "(515) 294-4347"
             }
           ],
