Ecosystem Home Hero components - Correcting issues with play/pause buttons on vimeo video, missing youtube play/pause button and creating a cdn/local version (https://trello.com/c/voCuBUV1/16-ecosystem-home-hero-background-video-vimeo-play-pause-button-reversed)

--- a/src/components/ecosystem-home-hero/ecosystem-home-hero.config.json
+++ b/src/components/ecosystem-home-hero/ecosystem-home-hero.config.json
@@ -67,6 +67,31 @@
       }
     },
     {
+      "name": "background-video--cdn",
+      "context": {
+        "hero": {
+          "image": "../../img/ecosystem-hero-featured_fpo.jpg",
+          "title": "Hero Title Lorem Ipsum Dolor",
+          "video": {
+            "url": "https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4",
+            "mime_type": "video/mp4"
+          },
+          "button_set": {
+            "items": [
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              },
+              {
+                "text": "Button Label",
+                "url": "https://iastate.edu"
+              }
+            ]
+          }
+        }
+      }
+    },
+    {
       "name": "no-image",
       "context": {
         "hero": {
