Setting up option for accordions - allowing first to be open/closed (https://trello.com/c/Mn7mHi7u/19-closed-accordion-option)

--- a/src/components/accordion/accordion.config.json
+++ b/src/components/accordion/accordion.config.json
@@ -1,6 +1,7 @@
 {
   "context": {
     "id": "0",
+    "first_accordion_open": true,
     "sections": [
       {
         "title": "Accordion Short Title",
